--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -1,9 +1,23 @@
-<div class="d-flex flex-column justify-content-center align-items-center h-100">
-    <div class="d-flex flex-grow-1 justify-content-center align-items-center">
-    <div class="card align-self-center" style="width: 18rem; height: 18rem">
-      <div class="card-body">
-        <h5 class="card-title"><%= t '.login' %></h5>
+<% @html_styles = "height: 100%;" %>
+<% @body_styles = "height: 100%;" %>
+<div class="d-flex flex-column justify-content-center align-items-center h-100 w-100">
+    <div class="d-flex flex-grow-1 justify-content-center align-items-center w-100">
+    <%= simple_form_for @user, url: session_create_path do |f| %>
+      <div class="card" style="width: 20%; min-width: 24rem">
+        <div class="card-header">
+          <%= t '.login' %>
+        </div>
+        <div class="card-body">
+          <% if flash[:alert] %>
+            <div class="alert alert-danger"><%= flash[:alert] %></div>
+          <% end %>
+          <%= f.input :username %>
+          <%= f.input :password %>
+        </div>
+        <div class="card-footer text-end">
+          <%= f.button :submit, t('.login'), class: 'btn-primary btn-xl-block' %>
+        </div>
       </div>
-    </div>
+    <% end %>
   </div>
 </div>
