--- a/app/javascript/scss/_menu.scss
+++ b/app/javascript/scss/_menu.scss
@@ -1,16 +1,23 @@
 div.menu {
   height: 100vh;
-}
 
-div.menu_button {
-  width: 120px;
-  height: 120px;
-  float: left;
-  padding: 10px;
-  margin: 10px;
-  border: solid black 1px;
-  border-radius: 10px;
-  box-shadow: 5px 5px #eeeeee;
+  div.menu_button {
+    width: calc((100vw - 100px) / 4);
+    float: left;
+    margin: 10px;
+    border: solid black 1px;
+    border-radius: 10px;
+    box-shadow: 5px 5px #eeeeee;
+    &:after {
+      content: '';
+      display: block;
+      padding-bottom: 100%;
+    }
+    font-size: 5vw;
+    &.active {
+      cursor: pointer;
+    }
+  }
 }
 
 div.scroll-v {
@@ -22,16 +29,7 @@ div.scroll-v {
   width: auto;
 }
 
-@debug $grid-breakpoints;
-
-@mixin btn-block() {
-  display: block;
-  padding-bottom: .8rem;
-  margin-top: .5rem;
-  margin-bottom: .5rem;
-  width: 100%;
-}
-
+/*
 @each $breakpoint, $size in $grid-breakpoints {
   @include media-breakpoint-up($breakpoint) {
     @if $size != 0 {
@@ -43,3 +41,4 @@ div.scroll-v {
     }
   }
 }
+*/
