refactored search controller

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,7 +14,7 @@
             action: "focusin->keyboard#show click@window->keyboard#hide change->search#search keyup->search#search", 
             keyboard_target: "input" }
         %>
-        <button class="btn btn-outline-secondary reset-input" data-target="#subgroupsSearch" data-action="click->keyboard#reset">X</button>
+        <button class="btn btn-outline-secondary reset-input" data-action="click->keyboard#reset">X</button>
       </div>
     </div>
   </div>
