Set root of observer to the scroller target (was defaulting document)

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <div class="infinite-scroll-wrapper">
+  <div class="infinite-scroll-wrapper" data-infinite-scroll-target="scroller">
     <div class="infinite-scroll-content"  data-infinite-scroll-target="entries" data-search-target="entries">
       <%= render @products %>
     </div>
